--- a/cpp-python/Dockerfile
+++ b/cpp-python/Dockerfile
@@ -9,7 +9,8 @@ ENV SCIP_VER 5.0.1
 ENV SCIP_TAR scipoptsuite-$SCIP_VER.tgz
 ENV GOR_URL https://github.com/google/or-tools/archive
 ENV GOR_DIR /opt/google-or
-ENV GOR_TAR v6.7.1.tar.gz
+ENV GOR_VER 6.7.1
+ENV GOR_TAR v$GOR_VER.tar.gz
 
 # Update the system
 RUN apt -y update
@@ -30,12 +31,12 @@ RUN apt -y install flex bison
 # Python 2
 RUN apt -y install python python-pip python-dev python-setuptools python-wheel python-six
 RUN apt -y install swig
-RUN python -m pip install --upgrade pip setuptools
+RUN python -m pip install --upgrade pip setuptools virtualenv
 RUN python -m pip install --upgrade gcovr
 
 # Python 3
 RUN apt -y install python3 python3-pip python3-dev python3-setuptools python3-wheel python3-six
-RUN python3 -m pip install --upgrade pip setuptools
+RUN python3 -m pip install --upgrade pip setuptools virtualenv
 RUN python3 -m pip install --upgrade gcovr
 
 # Software engineering - Sonar
@@ -59,6 +60,8 @@ RUN rm -f $SCIP_DIR/$SCIP_TAR
 ## Google OR
 RUN mkdir -p $GOR_DIR && cd $GOR_DIR && wget "$GOR_URL/$GOR_TAR"
 RUN cd $GOR_DIR && tar zxf $GOR_TAR
+RUN mkdir -p $GOR_DIR/or-tools-$GOR_VER/build && cd $GOR_DIR/or-tools-$GOR_VER/build && \
+    cmake -DCMAKE_INSTALL_PREFIX=/usr/local -DBUILD_SHARED_LIBS=ON .. && make -j4 all install
 
 ## OGDF (Open Graph)
 RUN mkdir -p /opt && cd /opt && git clone https://github.com/ogdf/ogdf.git && \
