[C++][Basis] (Attempt) to fix the UTF8 issue with GCov

--- a/api-management/tyk-dashboard/Dockerfile
+++ b/api-management/tyk-dashboard/Dockerfile
@@ -5,6 +5,9 @@ LABEL version="0.1"
 # Environment
 ENV HOME /root
 
+#
+VOLUME ["/sys/fs/cgroup", "/run", "/tmp"]
+
 # Import the Centos-7 GPG key to prevent warnings
 RUN rpm --import http://mirror.centos.org/centos/RPM-GPG-KEY-CentOS-7
 
@@ -16,7 +19,8 @@ RUN yum -y upgrade
 RUN yum -y install epel-release
 
 # Base install
-RUN yum -y install git-all unzip tar wget curl which yum-utils
+RUN yum -y install initscripts
+RUN yum -y install sudo htop less file rpmconf git-all bash-completion unzip tar wget curl which yum-utils net-utils
 
 # Python
 RUN yum -y install python34 python34-pip python34-devel pygpgme
@@ -38,4 +42,8 @@ EXPOSE 3000
 # Handy aliases
 RUN echo "alias dir='ls -laFh --color'" >> $HOME/.bashrc
 
+#
+RUN echo "root:root"|chpasswd
+#CMD ["/usr/sbin/init"]
+CMD ["/bin/bash"]
 
