--- a/cpp-python/basis/Dockerfile
+++ b/cpp-python/basis/Dockerfile
@@ -34,18 +34,9 @@ RUN apt -y install python3 python3-pip python3-dev python3-setuptools python3-wh
 RUN python3 -m pip install --upgrade pip setuptools virtualenv
 RUN python3 -m pip install --upgrade gcovr
 
-# GCov patch for UTF8 handling
-# That patch process has to be removed once the newer version of GCov is available
-# Reference: http://github.com/gcovr/gcovr/issues/148
-RUN mkdir -p $GCOV_TMP_DIR && cp /usr/local/bin/gcovr $GCOV_TMP_DIR
-COPY resources/gcovr-fix-utf8-issue.patch $GCOV_TMP_DIR
-RUN cd $GCOV_TMP_DIR && patch -p1 gcovr < gcovr-fix-utf8-issue.patch && cp gcovr /usr/local/bin
-
 # Software engineering - Sonar
-RUN wget -q -O sonar-scanner.zip https://sonarsource.bintray.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-3.0.3.778-linux.zip && \
- unzip -q sonar-scanner.zip && \
- DIR=`pwd` && ln -s $DIR/sonar-scanner-3.0.3.778-linux/bin/sonar-scanner /bin && \
- rm -f sonar-scanner.zip
+RUN apt-get -y install npm
+RUN npm install -g sonarqube-scanner
 
 # Visualization
 RUN apt -y install graphviz
